<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_leaderboard"
        android:icon="@drawable/ic_baseline_leaderboard"
        android:title="@string/title_leaderboard" />
    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_baseline_map"
        android:title="@string/title_map" />
    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_baseline_history"
        android:title="@string/title_history" />
</menu>