<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sort by:"
        android:textStyle="bold"
        android:textSize="40sp"
        android:padding="20dp"/>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/history_sort_points_ascend"
        android:text="Points - ascending"
        android:textSize="25sp"
        android:padding="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/history_sort_points_descend"
        android:text="Points - descending"
        android:textSize="25sp"
        android:padding="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/history_sort_date_descend"
        android:text="Date - descending"
        android:textSize="25sp"
        android:padding="20dp"/>

</LinearLayout>